parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT_SINGLELINE
    COMMENT_MULTILINE

Grammar

Rule 0     S' -> script_file
Rule 1     script_file -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> assignment_statement
Rule 5     statement -> loop_statement
Rule 6     statement -> if_statement
Rule 7     statement -> break_statement
Rule 8     statement -> continue_statement
Rule 9     statement -> return_statement
Rule 10    statement -> compound_statement
Rule 11    statement -> named_function_decl
Rule 12    assignment_statement -> lvalue ASSIGN expression SEMICOLON
Rule 13    assignment_statement -> lvalue ASSIGN_PLUS expression SEMICOLON
Rule 14    break_statement -> BREAK SEMICOLON
Rule 15    continue_statement -> CONTINUE SEMICOLON
Rule 16    return_statement -> RETURN SEMICOLON
Rule 17    return_statement -> RETURN expression SEMICOLON
Rule 18    loop_statement -> for_loop_statement
Rule 19    loop_statement -> do_loop_statement
Rule 20    loop_statement -> while_loop_statement
Rule 21    for_loop_statement -> FOR LPAREN ID IN expression RPAREN compound_statement
Rule 22    do_loop_statement -> DO compound_statement WHILE LPAREN expression RPAREN SEMICOLON
Rule 23    while_loop_statement -> WHILE LPAREN expression RPAREN compound_statement
Rule 24    compound_statement -> LBRACE statement_list RBRACE
Rule 25    if_statement -> IF LPAREN expression RPAREN compound_statement
Rule 26    if_statement -> IF LPAREN expression RPAREN compound_statement ELSE compound_statement
Rule 27    lvalue -> ID
Rule 28    lvalue -> lvalue DOT ID
Rule 29    lvalue -> lvalue LBRACKET expression RBRACKET
Rule 30    expression -> binary_expression
Rule 31    binary_expression -> unary_expression
Rule 32    binary_expression -> binary_expression PLUS binary_expression
Rule 33    binary_expression -> binary_expression MINUS binary_expression
Rule 34    binary_expression -> binary_expression OR binary_expression
Rule 35    binary_expression -> binary_expression AND binary_expression
Rule 36    binary_expression -> binary_expression LT binary_expression
Rule 37    binary_expression -> binary_expression GT binary_expression
Rule 38    binary_expression -> binary_expression LEQ binary_expression
Rule 39    binary_expression -> binary_expression GEQ binary_expression
Rule 40    binary_expression -> binary_expression EQ binary_expression
Rule 41    binary_expression -> binary_expression NE binary_expression
Rule 42    unary_expression -> postfix_expression
Rule 43    unary_expression -> STAR binary_expression
Rule 44    unary_expression -> NOT binary_expression
Rule 45    unary_expression -> MINUS binary_expression
Rule 46    postfix_expression -> primary_expression
Rule 47    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 48    postfix_expression -> postfix_expression LPAREN expression_list RPAREN
Rule 49    postfix_expression -> postfix_expression LPAREN RPAREN
Rule 50    postfix_expression -> postfix_expression DOT identifier_name
Rule 51    primary_expression -> identifier_name
Rule 52    primary_expression -> list_expression
Rule 53    primary_expression -> constant
Rule 54    primary_expression -> function_decl_expression
Rule 55    primary_expression -> lambda_expression
Rule 56    primary_expression -> dict_expression
Rule 57    primary_expression -> LPAREN expression RPAREN
Rule 58    constant -> INT_LITERAL
Rule 59    constant -> string_literal
Rule 60    constant -> boolean_literal
Rule 61    string_literal -> QUOTATION_MARK string_chars QUOTATION_MARK
Rule 62    string_chars -> <empty>
Rule 63    string_chars -> string_chars string_char
Rule 64    string_char -> UNESCAPED
Rule 65    string_char -> ESCAPE QUOTATION_MARK
Rule 66    string_char -> ESCAPE BACKSLASH
Rule 67    string_char -> ESCAPE BACKSPACE_CHAR
Rule 68    string_char -> ESCAPE FORM_FEED_CHAR
Rule 69    string_char -> ESCAPE LINE_FEED_CHAR
Rule 70    string_char -> ESCAPE CARRIAGE_RETURN_CHAR
Rule 71    string_char -> ESCAPE TAB_CHAR
Rule 72    string_char -> ESCAPE UNICODE_HEX
Rule 73    boolean_literal -> TRUE
Rule 74    boolean_literal -> FALSE
Rule 75    list_expression -> LBRACKET RBRACKET
Rule 76    list_expression -> LBRACKET expression_list RBRACKET
Rule 77    function_decl_expression -> FUNC LPAREN identifier_list RPAREN compound_statement
Rule 78    function_decl_expression -> FUNC LPAREN RPAREN compound_statement
Rule 79    named_function_decl -> FUNC ID LPAREN identifier_list RPAREN compound_statement
Rule 80    named_function_decl -> FUNC ID LPAREN RPAREN compound_statement
Rule 81    lambda_expression -> LAMBDA identifier_list COLON expression
Rule 82    lambda_expression -> LAMBDA COLON expression
Rule 83    dict_expression -> LBRACE RBRACE
Rule 84    dict_expression -> LBRACE key_value_list RBRACE
Rule 85    key_value_list -> expression COLON expression
Rule 86    key_value_list -> key_value_list COMMA expression COLON expression
Rule 87    expression_list -> expression
Rule 88    expression_list -> expression_list COMMA expression
Rule 89    identifier_list -> ID
Rule 90    identifier_list -> identifier_list COMMA ID
Rule 91    identifier_name -> ID

Terminals, with rules where they appear

AND                  : 35
ASSIGN               : 12
ASSIGN_PLUS          : 13
BACKSLASH            : 66
BACKSPACE_CHAR       : 67
BREAK                : 14
CARRIAGE_RETURN_CHAR : 70
COLON                : 81 82 85 86
COMMA                : 86 88 90
COMMENT_MULTILINE    : 
COMMENT_SINGLELINE   : 
CONTINUE             : 15
DO                   : 22
DOT                  : 28 50
ELSE                 : 26
EQ                   : 40
ESCAPE               : 65 66 67 68 69 70 71 72
FALSE                : 74
FOR                  : 21
FORM_FEED_CHAR       : 68
FUNC                 : 77 78 79 80
GEQ                  : 39
GT                   : 37
ID                   : 21 27 28 79 80 89 90 91
IF                   : 25 26
IN                   : 21
INT_LITERAL          : 58
LAMBDA               : 81 82
LBRACE               : 24 83 84
LBRACKET             : 29 47 75 76
LEQ                  : 38
LINE_FEED_CHAR       : 69
LPAREN               : 21 22 23 25 26 48 49 57 77 78 79 80
LT                   : 36
MINUS                : 33 45
NE                   : 41
NOT                  : 44
OR                   : 34
PLUS                 : 32
QUOTATION_MARK       : 61 61 65
RBRACE               : 24 83 84
RBRACKET             : 29 47 75 76
RETURN               : 16 17
RPAREN               : 21 22 23 25 26 48 49 57 77 78 79 80
SEMICOLON            : 12 13 14 15 16 17 22
STAR                 : 43
TAB_CHAR             : 71
TRUE                 : 73
UNESCAPED            : 64
UNICODE_HEX          : 72
WHILE                : 22 23
error                : 

Nonterminals, with rules where they appear

assignment_statement : 4
binary_expression    : 30 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 43 44 45
boolean_literal      : 60
break_statement      : 7
compound_statement   : 10 21 22 23 25 26 26 77 78 79 80
constant             : 53
continue_statement   : 8
dict_expression      : 56
do_loop_statement    : 19
expression           : 12 13 17 21 22 23 25 26 29 47 57 81 82 85 85 86 86 87 88
expression_list      : 48 76 88
for_loop_statement   : 18
function_decl_expression : 54
identifier_list      : 77 79 81 90
identifier_name      : 50 51
if_statement         : 6
key_value_list       : 84 86
lambda_expression    : 55
list_expression      : 52
loop_statement       : 5
lvalue               : 12 13 28 29
named_function_decl  : 11
postfix_expression   : 42 47 48 49 50
primary_expression   : 46
return_statement     : 9
script_file          : 0
statement            : 2 3
statement_list       : 1 3 24
string_char          : 63
string_chars         : 61 63
string_literal       : 59
unary_expression     : 31
while_loop_statement : 20

Parsing method: LALR

state 0

    (0) S' -> . script_file
    (1) script_file -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . assignment_statement
    (5) statement -> . loop_statement
    (6) statement -> . if_statement
    (7) statement -> . break_statement
    (8) statement -> . continue_statement
    (9) statement -> . return_statement
    (10) statement -> . compound_statement
    (11) statement -> . named_function_decl
    (12) assignment_statement -> . lvalue ASSIGN expression SEMICOLON
    (13) assignment_statement -> . lvalue ASSIGN_PLUS expression SEMICOLON
    (18) loop_statement -> . for_loop_statement
    (19) loop_statement -> . do_loop_statement
    (20) loop_statement -> . while_loop_statement
    (25) if_statement -> . IF LPAREN expression RPAREN compound_statement
    (26) if_statement -> . IF LPAREN expression RPAREN compound_statement ELSE compound_statement
    (14) break_statement -> . BREAK SEMICOLON
    (15) continue_statement -> . CONTINUE SEMICOLON
    (16) return_statement -> . RETURN SEMICOLON
    (17) return_statement -> . RETURN expression SEMICOLON
    (24) compound_statement -> . LBRACE statement_list RBRACE
    (79) named_function_decl -> . FUNC ID LPAREN identifier_list RPAREN compound_statement
    (80) named_function_decl -> . FUNC ID LPAREN RPAREN compound_statement
    (27) lvalue -> . ID
    (28) lvalue -> . lvalue DOT ID
    (29) lvalue -> . lvalue LBRACKET expression RBRACKET
    (21) for_loop_statement -> . FOR LPAREN ID IN expression RPAREN compound_statement
    (22) do_loop_statement -> . DO compound_statement WHILE LPAREN expression RPAREN SEMICOLON
    (23) while_loop_statement -> . WHILE LPAREN expression RPAREN compound_statement

    IF              shift and go to state 19
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    RETURN          shift and go to state 2
    LBRACE          shift and go to state 20
    FUNC            shift and go to state 3
    ID              shift and go to state 18
    FOR             shift and go to state 17
    DO              shift and go to state 1
    WHILE           shift and go to state 6

    return_statement               shift and go to state 12
    while_loop_statement           shift and go to state 8
    do_loop_statement              shift and go to state 7
    loop_statement                 shift and go to state 4
    compound_statement             shift and go to state 9
    lvalue                         shift and go to state 10
    for_loop_statement             shift and go to state 21
    assignment_statement           shift and go to state 11
    break_statement                shift and go to state 5
    continue_statement             shift and go to state 13
    statement                      shift and go to state 14
    statement_list                 shift and go to state 25
    named_function_decl            shift and go to state 15
    if_statement                   shift and go to state 16
    script_file                    shift and go to state 22

state 1

    (22) do_loop_statement -> DO . compound_statement WHILE LPAREN expression RPAREN SEMICOLON
    (24) compound_statement -> . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 20

    compound_statement             shift and go to state 26

state 2

    (16) return_statement -> RETURN . SEMICOLON
    (17) return_statement -> RETURN . expression SEMICOLON
    (30) expression -> . binary_expression
    (31) binary_expression -> . unary_expression
    (32) binary_expression -> . binary_expression PLUS binary_expression
    (33) binary_expression -> . binary_expression MINUS binary_expression
    (34) binary_expression -> . binary_expression OR binary_expression
    (35) binary_expression -> . binary_expression AND binary_expression
    (36) binary_expression -> . binary_expression LT binary_expression
    (37) binary_expression -> . binary_expression GT binary_expression
    (38) binary_expression -> . binary_expression LEQ binary_expression
    (39) binary_expression -> . binary_expression GEQ binary_expression
    (40) binary_expression -> . binary_expression EQ binary_expression
    (41) binary_expression -> . binary_expression NE binary_expression
    (42) unary_expression -> . postfix_expression
    (43) unary_expression -> . STAR binary_expression
    (44) unary_expression -> . NOT binary_expression
    (45) unary_expression -> . MINUS binary_expression
    (46) postfix_expression -> . primary_expression
    (47) postfix_expression -> . postfix_expression LBRACKET expression RBRACKET
    (48) postfix_expression -> . postfix_expression LPAREN expression_list RPAREN
    (49) postfix_expression -> . postfix_expression LPAREN RPAREN
    (50) postfix_expression -> . postfix_expression DOT identifier_name
    (51) primary_expression -> . identifier_name
    (52) primary_expression -> . list_expression
    (53) primary_expression -> . constant
    (54) primary_expression -> . function_decl_expression
    (55) primary_expression -> . lambda_expression
    (56) primary_expression -> . dict_expression
    (57) primary_expression -> . LPAREN expression RPAREN
    (91) identifier_name -> . ID
    (75) list_expression -> . LBRACKET RBRACKET
    (76) list_expression -> . LBRACKET expression_list RBRACKET
    (58) constant -> . INT_LITERAL
    (59) constant -> . string_literal
    (60) constant -> . boolean_literal
    (77) function_decl_expression -> . FUNC LPAREN identifier_list RPAREN compound_statement
    (78) function_decl_expression -> . FUNC LPAREN RPAREN compound_statement
    (81) lambda_expression -> . LAMBDA identifier_list COLON expression
    (82) lambda_expression -> . LAMBDA COLON expression
    (83) dict_expression -> . LBRACE RBRACE
    (84) dict_expression -> . LBRACE key_value_list RBRACE
    (61) string_literal -> . QUOTATION_MARK string_chars QUOTATION_MARK
    (73) boolean_literal -> . TRUE
    (74) boolean_literal -> . FALSE

    SEMICOLON       shift and go to state 37
    STAR            shift and go to state 33
    NOT             shift and go to state 50
    MINUS           shift and go to state 36
    LPAREN          shift and go to state 44
    ID              shift and go to state 46
    LBRACKET        shift and go to state 31
    INT_LITERAL     shift and go to state 42
    FUNC            shift and go to state 27
    LAMBDA          shift and go to state 53
    LBRACE          shift and go to state 47
    QUOTATION_MARK  shift and go to state 32
    TRUE            shift and go to state 35
    FALSE           shift and go to state 48

    constant                       shift and go to state 39
    binary_expression              shift and go to state 49
    unary_expression               shift and go to state 28
    lambda_expression              shift and go to state 29
    list_expression                shift and go to state 41
    postfix_expression             shift and go to state 38
    boolean_literal                shift and go to state 30
    primary_expression             shift and go to state 43
    function_decl_expression       shift and go to state 45
    identifier_name                shift and go to state 34
    expression                     shift and go to state 51
    dict_expression                shift and go to state 52
    string_literal                 shift and go to state 40

state 3

    (79) named_function_decl -> FUNC . ID LPAREN identifier_list RPAREN compound_statement
    (80) named_function_decl -> FUNC . ID LPAREN RPAREN compound_statement

    ID              shift and go to state 54


state 4

    (5) statement -> loop_statement .

    IF              reduce using rule 5 (statement -> loop_statement .)
    BREAK           reduce using rule 5 (statement -> loop_statement .)
    CONTINUE        reduce using rule 5 (statement -> loop_statement .)
    RETURN          reduce using rule 5 (statement -> loop_statement .)
    LBRACE          reduce using rule 5 (statement -> loop_statement .)
    FUNC            reduce using rule 5 (statement -> loop_statement .)
    ID              reduce using rule 5 (statement -> loop_statement .)
    FOR             reduce using rule 5 (statement -> loop_statement .)
    DO              reduce using rule 5 (statement -> loop_statement .)
    WHILE           reduce using rule 5 (statement -> loop_statement .)
    $end            reduce using rule 5 (statement -> loop_statement .)
    RBRACE          reduce using rule 5 (statement -> loop_statement .)


state 5

    (7) statement -> break_statement .

    IF              reduce using rule 7 (statement -> break_statement .)
    BREAK           reduce using rule 7 (statement -> break_statement .)
    CONTINUE        reduce using rule 7 (statement -> break_statement .)
    RETURN          reduce using rule 7 (statement -> break_statement .)
    LBRACE          reduce using rule 7 (statement -> break_statement .)
    FUNC            reduce using rule 7 (statement -> break_statement .)
    ID              reduce using rule 7 (statement -> break_statement .)
    FOR             reduce using rule 7 (statement -> break_statement .)
    DO              reduce using rule 7 (statement -> break_statement .)
    WHILE           reduce using rule 7 (statement -> break_statement .)
    $end            reduce using rule 7 (statement -> break_statement .)
    RBRACE          reduce using rule 7 (statement -> break_statement .)


state 6

    (23) while_loop_statement -> WHILE . LPAREN expression RPAREN compound_statement

    LPAREN          shift and go to state 55


state 7

    (19) loop_statement -> do_loop_statement .

    IF              reduce using rule 19 (loop_statement -> do_loop_statement .)
    BREAK           reduce using rule 19 (loop_statement -> do_loop_statement .)
    CONTINUE        reduce using rule 19 (loop_statement -> do_loop_statement .)
    RETURN          reduce using rule 19 (loop_statement -> do_loop_statement .)
    LBRACE          reduce using rule 19 (loop_statement -> do_loop_statement .)
    FUNC            reduce using rule 19 (loop_statement -> do_loop_statement .)
    ID              reduce using rule 19 (loop_statement -> do_loop_statement .)
    FOR             reduce using rule 19 (loop_statement -> do_loop_statement .)
    DO              reduce using rule 19 (loop_statement -> do_loop_statement .)
    WHILE           reduce using rule 19 (loop_statement -> do_loop_statement .)
    $end            reduce using rule 19 (loop_statement -> do_loop_statement .)
    RBRACE          reduce using rule 19 (loop_statement -> do_loop_statement .)


state 8

    (20) loop_statement -> while_loop_statement .

    IF              reduce using rule 20 (loop_statement -> while_loop_statement .)
    BREAK           reduce using rule 20 (loop_statement -> while_loop_statement .)
    CONTINUE        reduce using rule 20 (loop_statement -> while_loop_statement .)
    RETURN          reduce using rule 20 (loop_statement -> while_loop_statement .)
    LBRACE          reduce using rule 20 (loop_statement -> while_loop_statement .)
    FUNC            reduce using rule 20 (loop_statement -> while_loop_statement .)
    ID              reduce using rule 20 (loop_statement -> while_loop_statement .)
    FOR             reduce using rule 20 (loop_statement -> while_loop_statement .)
    DO              reduce using rule 20 (loop_statement -> while_loop_statement .)
    WHILE           reduce using rule 20 (loop_statement -> while_loop_statement .)
    $end            reduce using rule 20 (loop_statement -> while_loop_statement .)
    RBRACE          reduce using rule 20 (loop_statement -> while_loop_statement .)


state 9

    (10) statement -> compound_statement .

    IF              reduce using rule 10 (statement -> compound_statement .)
    BREAK           reduce using rule 10 (statement -> compound_statement .)
    CONTINUE        reduce using rule 10 (statement -> compound_statement .)
    RETURN          reduce using rule 10 (statement -> compound_statement .)
    LBRACE          reduce using rule 10 (statement -> compound_statement .)
    FUNC            reduce using rule 10 (statement -> compound_statement .)
    ID              reduce using rule 10 (statement -> compound_statement .)
    FOR             reduce using rule 10 (statement -> compound_statement .)
    DO              reduce using rule 10 (statement -> compound_statement .)
    WHILE           reduce using rule 10 (statement -> compound_statement .)
    $end            reduce using rule 10 (statement -> compound_statement .)
    RBRACE          reduce using rule 10 (statement -> compound_statement .)


state 10

    (12) assignment_statement -> lvalue . ASSIGN expression SEMICOLON
    (13) assignment_statement -> lvalue . ASSIGN_PLUS expression SEMICOLON
    (28) lvalue -> lvalue . DOT ID
    (29) lvalue -> lvalue . LBRACKET expression RBRACKET

    ASSIGN          shift and go to state 58
    ASSIGN_PLUS     shift and go to state 56
    DOT             shift and go to state 59
    LBRACKET        shift and go to state 57


state 11

    (4) statement -> assignment_statement .

    IF              reduce using rule 4 (statement -> assignment_statement .)
    BREAK           reduce using rule 4 (statement -> assignment_statement .)
    CONTINUE        reduce using rule 4 (statement -> assignment_statement .)
    RETURN          reduce using rule 4 (statement -> assignment_statement .)
    LBRACE          reduce using rule 4 (statement -> assignment_statement .)
    FUNC            reduce using rule 4 (statement -> assignment_statement .)
    ID              reduce using rule 4 (statement -> assignment_statement .)
    FOR             reduce using rule 4 (statement -> assignment_statement .)
    DO              reduce using rule 4 (statement -> assignment_statement .)
    WHILE           reduce using rule 4 (statement -> assignment_statement .)
    $end            reduce using rule 4 (statement -> assignment_statement .)
    RBRACE          reduce using rule 4 (statement -> assignment_statement .)


state 12

    (9) statement -> return_statement .
